# pdf-summariser-for-automated-reports-tool

./: LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
src/pdf-summariser-for-automated-reports-tool/: __init__.py  cli.py  converters.py  core.py
src/pdfkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_pdfkit.py
